[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Sprites/Misc/LargeShadow.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Sprite/Gaa.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Codes/Gaa.gd" type="Script" id=4]
[ext_resource path="res://Assets/SFX/Damage.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sprites/Misc/TutorialGameOver.png" type="Texture" id=7]
[ext_resource path="res://Assets/SFX/MenuSelected.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/MenuSelecting.mp3" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.301961, 0.882353, 0.486275, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.129412, 0.47451, 0.607843, 1 )

[sub_resource type="Animation" id=5]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver/BG:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOver/BG/Baa:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 224, 150 ), Vector2( 256, 150 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOver/BG/Gaa:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 288, 150 ), Vector2( 256, 150 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameOver/BG:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 32, 0 ), Vector2( -16, 0 ), Vector2( 8, 0 ), Vector2( -6, 0 ), Vector2( 4, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver/BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GameOver/BG/Baa:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 256, 150 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameOver/BG/Gaa:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 256, 150 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GameOver/BG:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
resource_name = "ThrowStone"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 67, 68, 69, 70, 71 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=15]
resource_name = "ThrowingStoneAnticipation"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 61, 60, 62, 63, 64, 65, 66, 61, 60 ]
}

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="Gaa" type="KinematicBody2D" groups=["Enemy"]]
pause_mode = 2
collision_layer = 4
script = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 1, 0.4 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 25
vframes = 4
frame = 1

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="HPBar" type="ProgressBar" parent="."]
visible = false
margin_left = -8.0
margin_top = -28.0
margin_right = 8.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 2 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false

[node name="Animation" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 5 )
anims/Hurt = SubResource( 13 )
anims/Idle = SubResource( 14 )
anims/RESET = SubResource( 6 )
anims/ThrowStone = SubResource( 16 )
anims/ThrowingStoneAnticipation = SubResource( 15 )

[node name="GameOver" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="BG" type="ColorRect" parent="GameOver"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 1
color = Color( 0.509804, 0.509804, 0.509804, 0.137255 )

[node name="Baa" type="Sprite" parent="GameOver/BG"]
modulate = Color( 1, 1, 1, 0.235294 )
position = Vector2( 256, 150 )
texture = ExtResource( 7 )
hframes = 2

[node name="Gaa" type="Sprite" parent="GameOver/BG"]
modulate = Color( 1, 1, 1, 0.235294 )
position = Vector2( 256, 150 )
texture = ExtResource( 7 )
hframes = 2
frame = 1

[node name="Restart" type="Button" parent="GameOver/BG"]
margin_left = 216.0
margin_top = 128.0
margin_right = 296.0
margin_bottom = 154.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Settings")
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.435294, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
action_mode = 0
text = "Restart"

[node name="Quit" type="Button" parent="GameOver/BG"]
margin_left = 216.0
margin_top = 168.0
margin_right = 296.0
margin_bottom = 194.0
focus_neighbour_top = NodePath(".")
focus_neighbour_bottom = NodePath("../Settings")
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.435294, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
action_mode = 0
text = "Quit"

[node name="Selecting" type="AudioStreamPlayer" parent="GameOver/BG"]
stream = ExtResource( 9 )
volume_db = -15.0
bus = "SFX"

[node name="Selected" type="AudioStreamPlayer" parent="GameOver/BG"]
stream = ExtResource( 8 )
volume_db = -15.0
bus = "SFX"

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
bus = "SFX"

[connection signal="value_changed" from="HPBar" to="." method="_on_HPBar_value_changed"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="focus_entered" from="GameOver/BG/Restart" to="." method="_on_Stuff_focus_entered"]
[connection signal="mouse_entered" from="GameOver/BG/Restart" to="." method="_on_Stuff_mouse_entered"]
[connection signal="pressed" from="GameOver/BG/Restart" to="." method="_on_Restart_pressed"]
[connection signal="focus_entered" from="GameOver/BG/Quit" to="." method="_on_Stuff_focus_entered"]
[connection signal="mouse_entered" from="GameOver/BG/Quit" to="." method="_on_Stuff_mouse_entered"]
[connection signal="pressed" from="GameOver/BG/Quit" to="." method="_on_Quit_pressed"]
